style(dialog): fix content max height on mobile view

--- a/src/components/dialog/bl-dialog.css
+++ b/src/components/dialog/bl-dialog.css
@@ -76,6 +76,10 @@ dialog footer.shadow {
     min-height: auto;
   }
 
+  dialog .content {
+    max-height: calc(100vh - 328px);
+  }
+
   dialog footer {
     display: flex;
     flex-flow: column wrap;
